--- a/src/View/Components/header.html.twig
+++ b/src/View/Components/header.html.twig
@@ -8,10 +8,13 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
+						<a class="nav-link active" aria-current="page" href="#">Accueil</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Quiz</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="#">Qui sommes-nous ?</a>
 					</li>
 				</ul>
 			</div>
