--- a/src/View/Components/header.html.twig
+++ b/src/View/Components/header.html.twig
@@ -14,7 +14,7 @@
 						<a class="nav-link" href="#">Quiz</a>
 					</li>
                     <li class="nav-item">
-						<a class="nav-link" href="#">Qui sommes-nous ?</a>
+						<a class="nav-link" href="/presentation">Qui sommes-nous ?</a>
 					</li>
 				</ul>
 			</div>
