--- a/src/View/Components/header.html.twig
+++ b/src/View/Components/header.html.twig
@@ -11,7 +11,7 @@
 						<a class="nav-link active" aria-current="page" href="#">Accueil</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Quiz</a>
+						<a class="nav-link" href="/quiz">Quiz</a>
 					</li>
                     <li class="nav-item">
 						<a class="nav-link" href="/presentation">Qui sommes-nous ?</a>
