design quiz page

--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -2,56 +2,56 @@
 
 {% block content %}
 
-	<h2 class="text-center mb-3">De quel climat aimeriez-vous profiter ?</h2>
+	<h2 class="text-center my-5">De quel climat aimeriez-vous profiter ?</h2>
 	<div class="container">
-		<div class="row">
+		<div class="row text-center mb-2">
 			<div class="col-4">
-				<img src="assets/images/winter.jpeg">
-				<p>Climat hivernal</p>
+				<img src="assets/images/winter.jpeg" class="rounded">
+				<h5>Climat hivernal</h5>
 			</div>
 			<div class="col-4">
-				<img src="assets/images/winter.jpeg">
-				<p>Climat hivernal</p>
+				<img src="assets/images/tempere.jpeg" class="rounded">
+				<h5>Climat tempéré</h5>
 			</div>
 			<div class="col-4">
-				<img src="assets/images/winter.jpeg">
-				<p>Climat hivernal</p>
+				<img src="assets/images/summer.jpeg" class="rounded">
+				<h5>Climat estival</h5>
 			</div>
 		</div>
 	</div>
 
-	<h2 class="text-center mb-3">Préférez-vous un pays proche ou lointain ?</h2>
+	<h2 class="text-center my-5">Préférez-vous un pays proche ou lointain ?</h2>
 	<div class="container">
-		<div class="row">
-			<div class="col-4">
-				<img src="assets/images/winter.jpeg">
-				<p>Pays voisin</p>
+		<div class="row text-center">
+			<div class="col-4 mb-2">
+				<img src="assets/images/barcelone.jpeg" class="rounded">
+				<h5>Pays voisin</h5>
 			</div>
 			<div class="col-4">
-				<img src="assets/images/winter.jpeg">
-				<p>Pays assez proche</p>
+				<img src="assets/images/maroc.jpeg" class="rounded">
+				<h5>Pays assez proche</h5>
 			</div>
 			<div class="col-4">
-				<img src="assets/images/winter.jpeg">
-				<p>Pays lointain</p>
+				<img src="assets/images/krabi.jpeg" class="rounded">
+				<h5>Pays lointain</h5>
 			</div>
 		</div>
 	</div>
 
-	<h2 class="text-center mb-3">De quelles activités voulez-vous profiter ?</h2>
+	<h2 class="text-center my-5">De quelles activités voulez-vous profiter ?</h2>
 	<div class="container">
-		<div class="row">
+		<div class="row text-center mb-2">
 			<div class="col-4">
-				<img src="assets/images/culture.png">
-				<p>Culture</p>
+				<img src="assets/images/culture.jpeg" class="rounded">
+				<h5>Culture</h5>
 			</div>
 			<div class="col-4">
-				<img src="assets/images/food.png">
-				<p>Cuisine</p>
+				<img src="assets/images/massaman.jpeg" class="rounded">
+				<h5>Cuisine</h5>
 			</div>
 			<div class="col-4">
-				<img src="assets/images/farniente.jpeg">
-				<p>Farniente</p>
+				<img src="assets/images/farniente.jpeg" class="rounded">
+				<h5>Farniente</h5>
 			</div>
 		</div>
 	</div>
