--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -1,59 +1,73 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
+	<form method="post" action="result.php">
 
-	<h2 class="text-center my-5">De quel climat aimeriez-vous profiter ?</h2>
-	<div class="container">
-		<div class="row text-center mb-2">
-			<div class="col-4">
-				<img src="assets/images/winter.jpeg" class="rounded">
-				<h5>Climat hivernal</h5>
-			</div>
-			<div class="col-4">
-				<img src="assets/images/tempere.jpeg" class="rounded">
-				<h5>Climat tempéré</h5>
-			</div>
-			<div class="col-4">
-				<img src="assets/images/summer.jpeg" class="rounded">
-				<h5>Climat estival</h5>
+		<h2 class="text-center my-5">De quel climat aimeriez-vous profiter ?</h2>
+		<div class="container">
+			<div class="row text-center mb-2">
+				<div class="col-4">
+					<img src="assets/images/winter.jpeg" class="rounded">
+					<input type="radio" name="q1" value="1">
+					Climat hivernal
+				</div>
+				<div class="col-4">
+					<img src="assets/images/tempere.jpeg" class="rounded">
+					<input type="radio" name="q1" value="2">
+					Climat tempéré
+				</div>
+				<div class="col-4">
+					<img src="assets/images/summer.jpeg" class="rounded">
+					<input type="radio" name="q1" value="3">
+					Climat estival
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<h2 class="text-center my-5">Préférez-vous un pays proche ou lointain ?</h2>
-	<div class="container">
-		<div class="row text-center">
-			<div class="col-4 mb-2">
-				<img src="assets/images/barcelone.jpeg" class="rounded">
-				<h5>Pays voisin</h5>
-			</div>
-			<div class="col-4">
-				<img src="assets/images/maroc.jpeg" class="rounded">
-				<h5>Pays assez proche</h5>
-			</div>
-			<div class="col-4">
-				<img src="assets/images/krabi.jpeg" class="rounded">
-				<h5>Pays lointain</h5>
+		<h2 class="text-center my-5">Préférez-vous un pays proche ou lointain ?</h2>
+		<div class="container">
+			<div class="row text-center">
+				<div class="col-4 mb-2">
+					<img src="assets/images/barcelone.jpeg" class="rounded">
+					<input type="radio" name="q2" value="1">
+					Pays voisin
+				</div>
+				<div class="col-4">
+					<img src="assets/images/maroc.jpeg" class="rounded">
+					<input type="radio" name="q2" value="2">
+					Pays assez proche
+				</div>
+				<div class="col-4">
+					<img src="assets/images/krabi.jpeg" class="rounded">
+					<input type="radio" name="q2" value="3">
+					Pays lointain
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<h2 class="text-center my-5">De quelles activités voulez-vous profiter ?</h2>
-	<div class="container">
-		<div class="row text-center mb-2">
-			<div class="col-4">
-				<img src="assets/images/culture.jpeg" class="rounded">
-				<h5>Culture</h5>
-			</div>
-			<div class="col-4">
-				<img src="assets/images/massaman.jpeg" class="rounded">
-				<h5>Cuisine</h5>
-			</div>
-			<div class="col-4">
-				<img src="assets/images/farniente.jpeg" class="rounded">
-				<h5>Farniente</h5>
+		<h2 class="text-center my-5">De quelles activités voulez-vous profiter ?</h2>
+		<div class="container">
+			<div class="row text-center mb-2">
+				<div class="col-4">
+					<img src="assets/images/culture.jpeg" class="rounded">
+					<input type="radio" name="q3" value="1">
+					Culture
+				</div>
+				<div class="col-4">
+					<img src="assets/images/massaman.jpeg" class="rounded">
+					<input type="radio" name="q3" value="2">
+					Cuisine
+				</div>
+				<div class="col-4">
+					<img src="assets/images/farniente.jpeg" class="rounded">
+					<input type="radio" name="q3" value="3">
+					Farniente
+				</div>
 			</div>
 		</div>
-	</div>
+		<div class="d-flex justify-content-center my-5">
+			<button class="">Découvrir quel pays est fait pour moi</button>
+		</div>
+	</form>
 
 {% endblock %}
