arrangé 2 ou 3 trucs

--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -73,7 +73,7 @@
 
 	<div class="d-flex justify-content-center">
 		<h3>Voici votre destination idéale : 
-        <a href="">{{result}}</a>
+        <a href="/">{{result}}</a>
 	</div>
 
     {{result}}
