mise en place d'une session

--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -72,8 +72,8 @@
 	</form>
 
 	<div class="d-flex justify-content-center">
-		<h3>Voici votre destination idéale : 
-        <a href="/">{{result}}</a>
+		<h3>Ma destination idéale : 
+        <a href="/pays">{{result}}</a>
 	</div>
 
     {{result}}
