--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,14 @@
-body {
-    color: #f76c6c;
+@font-face {
+    font-family: Lato;
+    src: url(../fonts/Lato-Light.ttf);
+}
+
+@font-face {
+    font-family: Amaranth;
+    src: url(../fonts/Amaranth-Regular.ttf);
+}
+
+:root {
+    --tool-font: Lato;
+    --content-font: Amaranth;
 }
