--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -14,15 +14,13 @@
 
 		{% block header %}
 			{% include 'Components/header.html.twig' %}
-            <img 
 		{% endblock %}
 
 
 		<link rel="stylesheet" href="/assets/css/style.css"> {% block stylesheet %}{% endblock %}
 		</head>
 
-		<body>
-			{% block content %}{% endblock %}
+		<body class="d-flex flex-column min-vh-100 justify-content-between"> {% block content %}{% endblock %}
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 			{% block javascript %}{% endblock %}
 		</body>
