--- a/src/View/chine/chine.html.twig
+++ b/src/View/chine/chine.html.twig
@@ -50,13 +50,13 @@
     <br>
     <div class="row justify-content-md-center">
         <div class="col-3">
-            <img class="img-thumbnail rounded-5" src="/assets/images/chine2.jpg">
+            <img class="img-thumbnail rounded-5" src="/assets/images/photo.jpg">
         </div>
         <div class="col-3">
             <img class="img-thumbnail rounded-5" src="/assets/images/chine1.jpg">
         </div>
         <div class="col-3">
-            <img class="img-thumbnail rounded-5" src="/assets/images/chine2.jpg">
+            <img class="img-thumbnail rounded-5" src="/assets/images/chine12.jpg">
         </div>
     </div>
 
