on a mis le code api en php

--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -9,8 +9,7 @@
 			<div class="row text-center mb-2">
 				<div class="col-4">
 					<img src="assets/images/winter.jpeg" class="rounded">
-					<input type="radio" name="q1" value="1">
-					Climat hivernal
+					<input type="radio" class="btn btn-primary" name="q1" value="1">Climat hivernal
 				</div>
 				<div class="col-4">
 					<img src="assets/images/tempere.jpeg" class="rounded">
@@ -72,7 +71,7 @@
 	</form>
 
 	<div class="d-flex justify-content-center">
-		<h3>Ma destination idéale : 
+		<h3>Voici votre destination idéale : 
         <a href="/pays">{{result}}</a>
 	</div>
 
