--- a/src/View/Home/result.html.twig
+++ b/src/View/Home/result.html.twig
@@ -1,10 +1,39 @@
 {% extends "layout.html.twig" %}
 
 {% block content %}
-<h1>Guide pratique de survie : {{result}}</h1>
+	<h1 class="text-center my-4">Guide pratique de survie :
+		{{result}}</h1>
 
-<h5>Capitale :</h5>
-<h5>Population :</h5>
-<h5>Météo :</h5>
-<h5>Numéros d'urgence :</h5>
+	<div class="container">
+		<div class="row text-center">
+			<div class="col-10 col-sm-6 col-md-5 col-xl-3 m-auto">
+				<div class="card" style="width: 18rem;">
+					<img src="assets/images/pomplar.jpeg" class="card-img-top h-100 w-auto" alt="...">
+					<div class="card-body">
+						<h4>Numéros d'urgence</h4>
+						<p class="card-text" id="country">{{country.population}}</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-10 col-sm-6 col-md-5 col-xl-3 m-auto">
+				<div class="card" style="width: 18rem;">
+					<img src="assets/images/capitalcity.webp" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h4>Capitale</h4>
+						<p class="card-text" id="capital">Nom de la ville</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-10 col-sm-6 col-md-5 col-xl-3 m-auto">
+				<div class="card" style="width: 18rem;">
+					<img src="assets/images/pomplar.jpeg" class="card-img-top" alt="...">
+					<div class="card-body">
+						<h4>Population</h4>
+						<p class="card-text">Nombre de gens</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
