adapter navbar sur les autres pages

--- a/src/View/layouts.html.twig
+++ b/src/View/layouts.html.twig
@@ -13,7 +13,7 @@
 		</title>
 
 		{% block header %}
-			{% include 'Components/headerindex.html.twig' %}
+			{% include 'Components/headers.html.twig' %}
 		{% endblock %}
 
 
