--- a/src/View/Components/headers.html.twig
+++ b/src/View/Components/headers.html.twig
@@ -1,34 +1,28 @@
 {% extends "layout.html.twig" %}
 
 {% block stylesheet %}
-	<link rel="stylesheet" href="/assets/css/header.css">
+	<link rel="stylesheet" href="/assets/css/headers.css">
 {% endblock %}
 
 
 {% block header %}
 	<nav class="navbar navbar-expand-lg fixed-top py-3">
 		<div class="container">
-			<a href="#" class="navbar-brand text-uppercase font-weight-bold">Twisted Trip</a>
+			<a href="/" class="navbar-brand text-uppercase font-weight-bold">Twisted Trip</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div id="navbarSupportedContent" class="collapse navbar-collapse">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a href="#" class="nav-link text-uppercase font-weight-bold">Accueil
+						<a href="/" class="nav-link text-uppercase font-weight-bold">Accueil
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link text-uppercase font-weight-bold">Quiz</a>
+						<a href="/quiz" class="nav-link text-uppercase font-weight-bold">Quiz</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link text-uppercase font-weight-bold">Guide dynamique</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" class="nav-link text-uppercase font-weight-bold">Qui sommes-nous</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" class="nav-link text-uppercase font-weight-bold">Contact</a>
+						<a href="/presentation" class="nav-link text-uppercase font-weight-bold">Qui sommes-nous ?</a>
 					</li>
 				</ul>
 			</div>
