--- a/src/View/Home/result.html.twig
+++ b/src/View/Home/result.html.twig
@@ -1,4 +1,4 @@
-{% extends "layout.html.twig" %}
+{% extends "layouts.html.twig" %}
 
 {% block content %}
 	<h1 class="text-center my-4">Guide pratique de survie :
