--- a/src/View/Components/headers.html.twig
+++ b/src/View/Components/headers.html.twig
@@ -6,7 +6,7 @@
 
 
 {% block header %}
-	<nav class="navbar navbar-expand-lg fixed-top py-3">
+	<nav class="navbar sticky-top navbar-expand-lg py-3 bg-light">
 		<div class="container">
 			<a href="/" class="navbar-brand text-uppercase font-weight-bold">Twisted Trip</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
