--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -12,7 +12,7 @@
 			</div>
 			<p class="fs-4 text-white">Cliquez sur le bouton pour commencer l'expérience</p>
 			<div>
-				<a class="btn btn-light btn-lg fs-5">Commencer</a>
+				<a href="/quiz" class="btn btn-light btn-lg fs-5">Commencer</a>
 			</div>
 		</div>
 	</div>
