--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -1,80 +1,86 @@
 {% extends "layouts.html.twig" %}
 
+{% block stylesheet %}
+	<link rel="stylesheet" href="/assets/css/quiz.css">
+{% endblock %}
+
 {% block content %}
 
 	<form method="post" action="">
 
 		<h2 class="text-center my-5">De quel climat aimeriez-vous profiter ?</h2>
 		<div class="container">
-			<div class="row text-center mb-2">
-				<div class="col-4">
-					<img src="assets/images/winter.jpeg" class="rounded">
-					<input type="radio" class="btn btn-primary" name="q1" value="1">Climat hivernal
+			<div class="row text-center mb-1 justify-content-around">
+				<div class="col-3 d-flex flex-column">
+					<input id="q1r1" type="radio" name="q1" value="1">
+					<label class="fs-4" for="q1r1">Climat hivernal
+						<img src="assets/images/winter.jpeg" class="rounded my-3"></label>
 				</div>
-				<div class="col-4">
-					<img src="assets/images/tempere.jpeg" class="rounded">
-					<input type="radio" name="q1" value="2">
-					Climat tempéré
+				<div class="col-3 d-flex flex-column">
+					<input id="q1r2" type="radio" name="q1" value="2">
+					<label class="fs-4" for="q1r2">Climat tempéré
+						<img src="assets/images/temerate.jpeg" class="rounded my-3"></label>
 				</div>
-				<div class="col-4">
-					<img src="assets/images/summer.jpeg" class="rounded">
-					<input type="radio" name="q1" value="3">
-					Climat estival
+				<div class="col-3 d-flex flex-column">
+					<input id="q1r3" type="radio" name="q1" value="3">
+					<label class="fs-4" for="q1r3">Climat estival
+						<img src="assets/images/summer.jpeg" class="rounded my-3"></label>
 				</div>
 			</div>
 		</div>
 
 		<h2 class="text-center my-5">Préférez-vous un pays proche ou lointain ?</h2>
 		<div class="container">
-			<div class="row text-center">
-				<div class="col-4 mb-2">
-					<img src="assets/images/barcelone.jpeg" class="rounded">
-					<input type="radio" name="q2" value="1">
-					Pays voisin
+			<div class="row text-center mb-1 justify-content-around">
+				<div class="col-3 d-flex flex-column">
+					<input id="q2r1" type="radio" name="q2" value="1">
+					<label class="fs-4" for="q2r1">Pays voisin
+						<img src="assets/images/barcelone.jpeg" class="rounded my-3"></label>
 				</div>
-				<div class="col-4">
-					<img src="assets/images/maroc.jpeg" class="rounded">
-					<input type="radio" name="q2" value="2">
-					Pays assez proche
+				<div class="col-3 d-flex flex-column">
+					<input id="q2r2" type="radio" name="q2" value="2">
+					<label class="fs-4" for="q2r2">Pays assez proche
+						<img src="assets/images/rif.jpeg" class="rounded my-3"></label>
 				</div>
-				<div class="col-4">
-					<img src="assets/images/krabi.jpeg" class="rounded">
-					<input type="radio" name="q2" value="3">
-					Pays lointain
+				<div class="col-3 d-flex flex-column">
+					<input id="q2r3" type="radio" name="q2" value="3">
+					<label class="fs-4" for="q2r3">Pays lointain
+						<img src="assets/images/krabi.jpeg" class="rounded my-3"></label>
 				</div>
 			</div>
 		</div>
 
 		<h2 class="text-center my-5">Quelles activités voulez-vous pratiquer ?</h2>
 		<div class="container">
-			<div class="row text-center mb-2">
-				<div class="col-4">
-					<img src="assets/images/culture.jpeg" class="rounded">
-					<input type="radio" name="q3" value="1">
-					Culture
+			<div class="row text-center mb-1 justify-content-around">
+				<div class="col-3 d-flex flex-column">
+
+					<input id="q3r1" type="radio" name="q3" value="1">
+					<label class="fs-4" for="q3r1">Culture
+						<img src="assets/images/culture.jpeg" class="rounded my-3"></label>
 				</div>
-				<div class="col-4">
-					<img src="assets/images/massaman.jpeg" class="rounded">
-					<input type="radio" name="q3" value="2">
-					Cuisine
+				<div class="col-3 d-flex flex-column">
+					<input id="q3r2" type="radio" name="q3" value="2">
+					<label class="fs-4" for="q3r2">Cuisine
+						<img src="assets/images/massaman.jpeg" class="rounded my-3"></label>
 				</div>
-				<div class="col-4">
-					<img src="assets/images/randonneur.jpeg" class="rounded">
-					<input type="radio" name="q3" value="3">
-					Activités d'extérieur
+				<div class="col-3 d-flex flex-column">
+					<input id="q3r3" type="radio" name="q3" value="3">
+					<label class="fs-4" for="q3r3">Activités d'extérieur
+						<img src="assets/images/randonneur.jpeg" class="rounded my-3"></label>
 				</div>
 			</div>
 		</div>
 		<div class="d-flex justify-content-center my-5">
-			<button type="submit">Découvrir quel pays est fait pour moi</button>
+			<button type="submit" class="btn btn-secondary">Découvrir quel pays est fait pour moi</button>
 		</div>
 	</form>
 
 	<div class="d-flex justify-content-center">
-		<h3>Voici votre destination idéale : 
-        <a href="/pays">{{result}}</a>
-	</div>
+		<h3>Voici votre destination idéale :
+			<a class="result text-info" href="/pays">{{result}}</a>
+		</div>
 
-    {{result}}
+		{{result}}
 
-{% endblock %}
+	{% endblock %}
