--- a/src/View/Home/quiz.html.twig
+++ b/src/View/Home/quiz.html.twig
@@ -78,7 +78,7 @@
 
 	<div class="d-flex justify-content-center">
 		<h3>Voici votre destination idéale :
-			<a class="result text-info" href="/pays">{{result}}</a>
+			<a class="result text-info" href="/result">{{result}}</a>
 		</div>
 
 		{{result}}
